Ran build, updated version number

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: seer
 Type: Package
 Title: Visualize Your Data and Results
-Version: 0.1.1.9000
+Version: 0.1.2.9000
 Date: 2015-10-13
 Authors@R: person("Luke", "Johnston", email = "lwjohnst@gmail.com",
     role = c("aut", "cre"))
@@ -10,10 +10,11 @@ Description: Become a seer of data to gain insights into the structure of
     from analyses. Uses the output from the mason package.
 License: MIT
 LazyData: TRUE
-Imports:
+Imports: 
     ggplot2,
     dplyr,
     mason,
     ggthemes,
-    magrittr
+    magrittr,
+    tidyr
 RoxygenNote: 5.0.0
