--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,27 @@
 Package: seer
 Type: Package
 Title: Visualize Your Data and Results
-Version: 0.1.2.9000
+Version: 0.1.3.9000
 Date: 2015-10-13
 Authors@R: person("Luke", "Johnston", email = "lwjohnst@gmail.com",
     role = c("aut", "cre"))
 Description: Become a seer of data to gain insights into the structure of
     your results. Use a common syntax to quickly create commonly used plots
     from analyses. Uses the output from the mason package.
-License: MIT
+License: MIT + file LICENSE
 LazyData: TRUE
-Imports: 
+Imports:
     ggplot2,
     dplyr,
     mason,
     ggthemes,
     magrittr,
-    tidyr
-RoxygenNote: 5.0.0
+    tidyr,
+    assertive,
+    pls
+RoxygenNote: 5.0.1
+Suggests:
+    MASS,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
