--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: seer
 Type: Package
 Title: Visualize Your Data and Results
-Version: 0.1.3.9000
+Version: 0.1.4.9000
 Date: 2015-10-13
 Authors@R: person("Luke", "Johnston", email = "lwjohnst@gmail.com",
     role = c("aut", "cre"))
@@ -13,15 +13,17 @@ LazyData: TRUE
 Imports:
     ggplot2,
     dplyr,
-    mason,
     ggthemes,
     magrittr,
     tidyr,
     assertive,
-    pls
+    tibble,
+    stats
 RoxygenNote: 5.0.1
 Suggests:
     MASS,
     knitr,
-    rmarkdown
+    rmarkdown,
+    pls,
+    caret
 VignetteBuilder: knitr
